# cuda_hook

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt  run_sample.sh
sample/cuda/: bandwidth_test.cu  matrix_mul.cu  vector_add.cu
sample/cuda/include/: exception.h  helper_cuda.h  helper_functions.h  helper_image.h  helper_string.h  helper_timer.h
sample/nvml/: nvml_example.c  supported_vgpus.c
src/common/: hook.h  macro_common.h  trace_profile.h
src/cublas/: cublas_hook.cpp  cublas_subset.h
src/cublasLt/: cublasLt_hook.cpp  cublasLt_subset.h
src/cuda/: cuda_hook.cpp  cuda_subset.h
src/cudart/: cudart_hook.cpp  cudart_subset.h
src/cudnn/: cudnn_hook.cpp  cudnn_subset.h
src/cufft/: cufft_hook.cpp  cufft_subset.h
src/curand/: curand_hook.cpp  curand_subset.h
src/cusolver/: cusolver_hook.cpp  cusolver_subset.h
src/cusparse/: cusparse_hook.cpp  cusparse_subset.h
src/nvblas/: nvblas_hook.cpp
src/nvjpeg/: nvjpeg_hook.cpp  nvjpeg_subset.h
src/nvml/: nvml_hook.cpp  nvml_subset.h
src/nvrtc/: nvrtc_hook.cpp  nvrtc_subset.h
src/nvtx/: nvtx_hook.cpp  nvtx_subset.h
tools/code_generate/: code_generate.py  code_generate.sh
tools/code_generate/include/: cublas.h  cublasLt.h  cuda.h  cuda_runtime_api.h  cufft.h  curand.h  cusolver_common.h  cusparse.h  nvToolsExt.h  nvjpeg.h  nvrtc.h
